# tractable

./: .clang-format  .clang-tidy  .gitignore  BUILD  Backend.cpp  Backend.h  CMakeLists.txt  Context.h  LICENSE  README.md  Trace.h  Tracer.cpp  Tracer.h  WORKSPACE  benchmark.cpp  main.cpp
backends/: AsyncBackend.cpp  AsyncBackend.h  ChromeTracingBackend.cpp  ChromeTracingBackend.h  ConsoleBackend.cpp  ConsoleBackend.h  LockedThreadsafeBackend.cpp  LockedThreadsafeBackend.h
benchmarks/: BUILD  benchmark.cpp
examples/: BUILD  main.cpp
trbl/: Attribute.h  BUILD  Backend.cpp  Backend.h  CMakeLists.txt  Context.cpp  Context.h  Counter.h  Session.h  Span.h  Trace.h
trbl/backends/: AsyncBackend.cpp  AsyncBackend.h  ChromeTracingBackend.cpp  ChromeTracingBackend.h  ConsoleBackend.cpp  ConsoleBackend.h  LockedThreadsafeBackend.cpp  LockedThreadsafeBackend.h
